# Aletheia

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ANTI_DRIFT.md  ARCHITECTURE.md  CONTRIBUTING.md  EVALUATION.md  Makefile  PROGRESS_LOG.md  PROJECT_CHARTER.md  README.md  ROADMAP.md  docker-compose.yml
.github/: dependabot.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_corpus_schema.py  0002_accounts_and_history.py  0003_widen_source_external_id.py
backend/data/corpus/: manifest.json
backend/src/aletheia/: __init__.py  config.py  main.py
backend/src/aletheia/accounts/: __init__.py  dependencies.py  models.py  repository.py  security.py
backend/tests/: test_bodylimit.py  test_extract.py  test_health.py  test_ratelimit.py  test_verify.py  test_verify_stream.py
backend/tests/agents/: __init__.py  test_contracts.py  test_generator.py  test_guardrails.py  test_intake.py  test_pipeline.py  test_prompts.py  test_retriever.py  test_verifier.py
backend/tests/corpus/: test_chunking.py  test_connectors.py  test_fever.py  test_ingest.py  test_ingest_db.py  test_live_wikipedia.py  test_manifest.py  test_models.py  test_retrieval.py  test_retrieval_db.py  test_scifact.py  test_scifact_db.py
backend/tests/embeddings/: test_factory.py  test_fake.py  test_local_integration.py
backend/tests/evaluation/: __init__.py  test_baseline.py  test_benchmark.py  test_dataset.py  test_error_analysis.py  test_fever_benchmark.py  test_fever_slice.py  test_metrics.py  test_phase3_coverage_db.py  test_phase3_metrics.py  test_phase3_runner.py  test_report.py  test_runner.py  test_trace.py
backend/tests/llm/: __init__.py  test_factory.py  test_fake_client.py  test_fallback.py  test_groq.py  test_recording.py
backend/tests/observability/: test_metrics.py  test_request_id_and_logging.py
(+149 files in other folders)
