[project]
name = "aletheia"
version = "0.1.0"
description = "Evidence-grounded, multi-agent verification framework — backend service."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Jay Gautam" }]
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "google-genai>=2.10.0",
    "groq>=1.5.0",
    "tenacity>=9.1.4",
    "langgraph>=1.2.7",
    "sqlalchemy[asyncio]>=2.0.51",
    "alembic>=1.14",
    "pgvector>=0.3.6",
    "psycopg[binary]>=3.3.4",
    "fastembed>=0.7",
    "httpx>=0.27",
    "prometheus-client>=0.25.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest-asyncio>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aletheia"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4", "SIM", "RUF", "PL", "ASYNC"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

# pgvector and fastembed ship no py.typed marker; trust them untyped.
[[tool.mypy.overrides]]
module = ["pgvector.*", "fastembed.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q --strict-markers -m 'not integration'"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: needs network or external services (excluded by default; run with -m integration)",
    "database: integration test backed by PostgreSQL + pgvector (CI runs these against an ephemeral service via -m 'integration and database')",
]
